--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="support_email" translatable="false">awesome\.ejilonok\@yandex\.ru</string>
     <string name="support_title">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
     <string name="support_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
+    <string name="terms_link" translatable="false">https:////yandex.ru/legal/practicum_offer/</string>
 </resources>
