Добавлен TextWatcher для поля поиска и реализована логика работы кнопки стирания

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -10,4 +10,5 @@
     <string name="shared_link">https://practicum.yandex.ru/android-developer/</string>
     <string name="support_title">Message for Playlist Maker developers</string>
     <string name="support_text">Thanks to the developers for a cool application!</string>
+    <string name="clear">clear</string>
 </resources>
