--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="support_title">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
     <string name="support_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
     <string name="terms_link" translatable="false">https:////yandex.ru/legal/practicum_offer/</string>
+    <string name="clear">очистить</string>
 </resources>
