Переключение тем вынесено в отдельный модуль и поправлено так, чтобы приложение по умолчанию после установки запускалось в главной активити с текущей темой телефона.
Почти для всех активити настроен портретный режим. Для поиска оставлена возможность менять ориентацию для проверки задания по спринту.

Сделано сохранение данных поисковой строки. Содержание строки сохраняется при навигации.

Реализована навигация по кнопкам. По мере развития проекта сделаю навигацию другими средствами, не через button'ы.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,10 +10,10 @@
     <string name="share_invitation">Поделиться приложением</string>
     <string name="connect_to_support">Написать в поддержку</string>
     <string name="terms_of_use">Пользовательское соглашение</string>
-    <string name="shared_link">https://practicum.yandex.ru/android-developer/</string>
     <string name="support_email" translatable="false">awesome\.ejilonok\@yandex\.ru</string>
     <string name="support_title">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
     <string name="support_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
     <string name="terms_link" translatable="false">https:////yandex.ru/legal/practicum_offer/</string>
     <string name="clear">очистить</string>
+    <string name="shared_link" translatable="false">https://practicum.yandex.ru/android-developer/</string>
 </resources>
