--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -10,4 +10,7 @@
     <string name="support_title">Message for Playlist Maker developers</string>
     <string name="support_text">Thanks to the developers for a cool application!</string>
     <string name="clear">clear</string>
+    <string name="no_tracks">Nothing was found</string>
+    <string name="server_error">Communication problems\\n\\nThe download failed. Check your internet connection</string>
+    <string name="update">Update</string>
 </resources>
