--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,8 @@
     <string name="terms_link" translatable="false">https:////yandex.ru/legal/practicum_offer/</string>
     <string name="clear">очистить</string>
     <string name="shared_link" translatable="false">https://practicum.yandex.ru/android-developer/</string>
+    <!-- Сообщения пользователю в окне поиска -->
+    <string name="no_tracks">Ничего не нашлось</string>
+    <string name="server_error">Проблемы со связью  Загрузка не удалась. Проверьте подключение к интернету</string>
+    <string name="update">Обновить</string>
 </resources>
