--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -13,4 +13,5 @@
     <string name="no_tracks">Nothing was found</string>
     <string name="server_error">Communication problems\\n\\nThe download failed. Check your internet connection</string>
     <string name="update">Update</string>
+    <string name="api_exception">API connection exception. Try to restart application</string>
 </resources>
