--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="no_tracks">Ничего не нашлось</string>
     <string name="server_error">Проблемы со связью  Загрузка не удалась. Проверьте подключение к интернету</string>
     <string name="update">Обновить</string>
+    <string name="api_exception">Ошибка открытия сервиса. Попробуйте перезапустить приложение</string>
 </resources>
