--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -14,4 +14,6 @@
     <string name="server_error">Communication problems\\n\\nThe download failed. Check your internet connection</string>
     <string name="update">Update</string>
     <string name="api_exception">API connection exception. Try to restart application</string>
+    <string name="history_title">You\'re looking for</string>
+    <string name="history_clear">Clear history</string>
 </resources>
