--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
     <string name="server_error">Проблемы со связью  Загрузка не удалась. Проверьте подключение к интернету</string>
     <string name="update">Обновить</string>
     <string name="api_exception">Ошибка открытия сервиса. Попробуйте перезапустить приложение</string>
+    <string name="history_title">Вы искали</string>
+    <string name="history_clear">Очистить историю</string>
 </resources>
