--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -21,4 +21,5 @@
     <string name="genre">Genre</string>
     <string name="country">Country</string>
     <string name="year">Year</string>
+    <string name="internal_error">Some internal error. Try to restart application</string>
 </resources>
