--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="genre">Жанр</string>
     <string name="country">Страна</string>
     <string name="internal_error">Непредвиденный сбой приложения. Попробуйте перезапустить приложение</string>
+    <string name="default_preview_time" translatable="false">00:00</string>
 </resources>
