--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="shared_link" translatable="false">https://practicum.yandex.ru/android-developer/</string>
     <!-- Сообщения пользователю в окне поиска -->
     <string name="no_tracks">Ничего не нашлось</string>
-    <string name="server_error">Проблемы со связью  Загрузка не удалась. Проверьте подключение к интернету</string>
+    <string name="server_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
     <string name="update">Обновить</string>
     <string name="api_exception">Ошибка открытия сервиса. Попробуйте перезапустить приложение</string>
     <string name="history_title">Вы искали</string>
