--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -22,4 +22,5 @@
     <string name="country">Country</string>
     <string name="year">Year</string>
     <string name="internal_error">Some internal error. Try to restart application</string>
+    <string name="empty_track">Track load exception</string>
 </resources>
