--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="country">Страна</string>
     <string name="internal_error">Непредвиденный сбой приложения. Попробуйте перезапустить приложение</string>
     <string name="default_preview_time" translatable="false">00:00</string>
+    <string name="empty_track">Ошибка загрузки информации о треке</string>
 </resources>
