--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,10 @@
     <string name="genre">Жанр</string>
     <string name="country">Страна</string>
     <string name="default_preview_time" translatable="false">00:00</string>
+    <!-- Окно медиатеки -->
+    <string name="empty_library">Ваша медиатека пуста</string>
+    <string name="empty_playlist_list">Вы не создали\nни одного плейлиста</string>
+    <string name="new_playlist">Новый плейлист</string>
+    <string name="favorite_tracks">Избранные треки</string>
+    <string name="playlists">Плейлисты</string>
 </resources>
